[package]
name = "fs3"
version = "0.4.4"
authors = ["Dan Burkert <dan@danburkert.com>", "fs3 Authors"]
license = "MIT/Apache-2.0"
repository = "https://github.com/oxidecomputer/fs3-rs"
documentation = "https://docs.rs/fs3"
description = "Cross-platform file locks and file duplication."
keywords = ["file", "file-system", "lock", "duplicate", "flock"]

[target.'cfg(unix)'.dependencies]
libc = "0.2.49"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["handleapi", "processthreadsapi", "winerror", "fileapi", "winbase", "std"] }

[dev-dependencies]
tempdir = "0.3"
